# recipe-repository

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  docker-compose.yaml  eslint.config.js  example.env  manage.py  package.json  postcss.config.js  prettier.config.js  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: tests.yml
docker/: Dockerfile  entrypoint.sh  run-dev-servers.sh
recipe_repo/: __init__.py  asgi.py  conftest.py  settings.py  urls.py  wsgi.py
recipe_repo/categories/: admin.py  apps.py  models.py  serializers.py  translation.py  urls.py  views.py
recipe_repo/categories/fixtures/: categories.json
recipe_repo/categories/migrations/: 0001_initial.py  0001_squashed_0003_alter_category_options_alter_categorytype_options.py  0002_migrate_categories.py  0003_alter_category_options_alter_categorytype_options.py  0004_alter_category_slug_alter_category_slug_en_and_more.py
recipe_repo/categories/tests/: test_views.py
recipe_repo/common/: middleware.py  models.py  utils.py  views.py
recipe_repo/common/fixtures/: admin-theme.json
recipe_repo/common/templatetags/: settings.py
recipe_repo/common/tests/: test_utils.py
recipe_repo/food/: admin.py  apps.py  models.py  translation.py
recipe_repo/food/fixtures/: food.json
recipe_repo/food/migrations/: 0001_initial.py  0002_alter_food_options.py  0003_food_aliases_food_aliases_en_food_aliases_fr_and_more.py
recipe_repo/inertia/: apps.py  middleware.py  views.py
recipe_repo/locales/fr/LC_MESSAGES/: django.mo  django.po
recipe_repo/locales/ja/LC_MESSAGES/: django.mo  django.po
recipe_repo/recipes/: admin.py  apps.py  fields.py  forms.py  import_recipe.py  models.py  recipe_importing.py  serializers.py  translation.py  urls.py  views.py
recipe_repo/recipes/fixtures/: categories.json  qualifiers.json  yield-units.json
recipe_repo/recipes/migrations/: 0001_initial.py  0001_squashed_0014_alter_category_name_alter_category_name_en_and_more.py  0002_alter_category_name_alter_category_name_en_and_more.py  0003_ingredientqualifier_recipe_source_yieldunit_and_more.py  0003_preparation_recipe_step_ingredient.py  0004_alter_ingredient_qualifier_alter_userrating_rating_and_more.py  0005_alter_nutritioninformation_recipe.py  0006_nutritioninformation_potassium_and_more.py  0007_remove_category_depth_remove_category_numchild_and_more.py  0008_recipe_favourited_by.py  0009_alter_ingredientgroup_options_ingredientgroup_order.py  0010_alter_ingredient_amount_alter_ingredient_amount_max.py  0011_remove_category_sub_categories_and_more.py  0012_recipe_description_en_recipe_description_fr_and_more.py  0013_category_path.py  0014_alter_category_name_alter_category_name_en_and_more.py  0015_alter_userrating_unique_together_and_more.py  0016_alter_recipe_slug_alter_recipe_slug_en_and_more.py
recipe_repo/recipes/templates/admin/: recipe_import.html
recipe_repo/recipes/templates/admin/recipes/recipe/: change_list.html
recipe_repo/recipes/tests/: test_recipe_importing.py  test_views.py
recipe_repo/units/: __init__.py  admin.py  apps.py  consts.py  models.py  translation.py  utils.py
recipe_repo/units/fixtures/: default-units.json  units.json
recipe_repo/units/migrations/: 0001_initial.py  0002_alter_unit_options.py
recipe_repo/units/tests/: test_utils.py
recipe_repo/users/: admin.py  apps.py  models.py  serializers.py
recipe_repo/users/migrations/: 0001_initial.py  0002_user_favourite_recipes_userrating_user_rated_recipes.py  0002_user_photo.py  0003_alter_user_options.py  0003_comment.py  0004_alter_comment_options.py
src/: components.d.ts  index.html  main.ts  style.css  style.scss  tailwind.css  vite-env.d.ts
src/assets/: android-manifest.json  manifest.json
src/components/: BreadcrumbBar.vue  CollapsibleItem.vue  DescriptionItem.vue  DurationSplitter.vue  FavouriteForm.vue  ImportModal.vue  IngredientList.vue  KeepAwake.vue  MultiSelect.vue  NutritionalInformation.vue  RatingForm.vue  RatingInput.vue  RecipeComments.vue  RecipeDurations.vue  RecipeSource.vue  RecipeYield.vue  SearchableLinkCards.vue  SelectInput.vue  ServingsForm.vue  SortableList.vue  SquareImage.vue  UserAvatar.vue  UserMenu.vue
src/components/forms/: IngredientEditor.vue  IngredientGroupEditor.vue  RatingForm.vue  StepEditor.vue
src/components/forms/inputs/: ImageInput.vue  InputField.vue  RatingInput.vue  SelectInput.vue  SlugField.vue  TextInput.vue
src/components/forms/inputs/test/: InputField.spec.ts  MultiSelect.spec.ts  SelectInput.spec.ts  SlugField.spec.ts  TextInput.spec.ts
src/components/forms/tests/: RatingForm.spec.ts  ServingsForm.spec.ts
src/components/tests/: BreadcrumbBar.spec.ts  CollapsibleItem.spec.ts  DescriptionItem.spec.ts  DurationSplitter.spec.ts  FavouriteForm.spec.ts  ImportModal.spec.ts  IngredientList.spec.ts  KeepAwake.spec.ts  MultiSelect.spec.ts  NutritionalInformation.spec.ts  RatingInput.spec.ts  RecipeComments.spec.ts  RecipeDurations.spec.ts  RecipeSource.spec.ts  RecipeYield.spec.ts  SearchableLinkCards.spec.ts  SortableList.spec.ts  SquareImage.spec.ts  UserAvatar.spec.ts  UserMenu.spec.ts
src/composables/: click-outside.ts  orderable-items.ts  share.ts
src/i18n/: en.json  fr.json  index.ts  ja.json
src/layouts/: HeadSection.vue  MainLayout.vue  UserMenu.vue
src/locales/: en.json  fr.json  ja.json
src/pages/: CategoryList.vue  CategoryTypeList.vue  RecipeDetail.vue  RecipeEdit.vue  RecipeList.vue  index.vue
src/plugins/: i18n.ts  primevue.ts
src/public/: browserconfig.xml
src/tests/: setup.ts
src/types/: categories.ts  common.ts  recipes.ts  users.ts
src/utils/: durations.ts
src/utils/tests/: durations.test.ts
